# testing-pkg1

./: .gitignore  MANIFEST.in  README.mc  README.md  __agio__.yml  pyproject.toml
testing_pkg1/: main.py
testing_pkg1/data/: info.json
